@@ -46,6 +46,7 @@ WriteMakefile(
 				     "Moose::Util::TypeConstraints" => '0',
 				     "Path::Class" => '0',
 				     "Path::Class::Dir" => '0',
+				     "Path::Class::File" => '0',
 				     "Pod::Usage" => '0',
 				     "RNA" => "2.3.4",
 				     "Storable" => '0',
