@@ -18,3 +18,4 @@ Revision history for Bio::RNA::RNAaliSplit
 
 0.05.1	Tue Jul 4 2017
 	- initial release of scripts/reformat_aln
+	- added Path::Class::File dependency to Makefile.PL
